# eyewire2-figures

./: .gitignore  LICENSE  README.md  pyproject.toml
data/: Eyewire II Proofread Cells Main List - Cell types and properties 2026-01-23.csv  README.md
notebooks/: RGC types for Figure.csv  data_config.yaml  paper.mplstyle  plot_ACs.ipynb  plot_BC_embedding.ipynb  plot_BCs.ipynb  plot_RGCs.ipynb  plot_cell_counts.ipynb  plot_cellclass_embedding.ipynb  plot_examples.ipynb  plot_proofreading-stats.ipynb  plot_rbccircuit_examples.ipynb  plot_rbcciruit_fig8_panelD.ipynb  plot_rgc_embedding.ipynb  plot_ribbons_fig8_panelF.ipynb  plot_ribbons_fig8_panelG.ipynb
utils/: colors.py  data_io.py  dendrogram.py  embedding.py  ew1.py  labeling.py  mosaics.py  plot_cells.py  style.py
website/v2026-05-15-15h/: AC_website_mosaic_examples.csv  AC_website_single_examples.csv  BC_website_mosaic_examples.csv  BC_website_single_examples.csv  RGC_website_mosaic_examples.csv  RGC_website_single_examples.csv
