[project]
name = "eyewire2-figures"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "adjusttext>=1.3.0",
    "cell-mosaics>=0.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.6",
    "pandas>=2.3.3",
    "pyarrow>=24.0.0",
    "pywarper>=0.2.6",
    "scanpy>=1.12.1",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "skeliner>=0.2.7",
]
